Apply JEP 427